# rogerhack

./: BCDnum.h  BitField.cpp  BitField.h  BitSet.h  CMakeLists.txt  CMakeSettings.json  Channel.cpp  Channel.h  Flags.cpp  Flags.h  Frequency.cpp  Frequency.h  README.md  ROGER_KP-23_empty.sin  ROGER_KP_23_empty.h  Sin.cpp  Sin.h  Tone.cpp  Tone.h  binary.h  common.cpp  common.h  main.cpp  rogerhack.cpp  rogerhack.sln  rogerhack.vcxproj  rogerhack.vcxproj.filters
testfiles/: ROGER_KP-23_LPD69-PMR8.sin  bed1.txt  bed2.txt  bed3.txt  compfilesize.bat  test1.sin  test1.txt
